--- a/Tinder Clone/Supporting Files/Info.plist
+++ b/Tinder Clone/Supporting Files/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We want you to meet people in your area</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need your picture so others can see you!</string>
 	<key>CFBundleDevelopmentRegion</key>
